# local-perplexity-ai

./: .gitignore  ARTICLE_FOUNDRY_LOCAL_PERPLEXITY.md  DONE.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  PLANO_SIMPLIFICACAO.md  README.md  README_OLD.md  REFACTORING_SUMMARY.md  config.py  llm_client.py  perplexity.py  prompts.py  pyproject.toml  schemas.py  start_foundry.bat  test_migration.py  utils.py
docs/: Architecture.md
